<resources>
    <string name="app_name">iBuy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Account</string>
    <string name="menu_slideshow">About</string>
    <string name="menu_cart">Shopping Cart</string>
    <string name="welcome_text">Welcome\n to iBuy</string>
    <string name="welcome_user">Welcome back\n</string>
    <string name="search_for_product">Search for product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="all_products">All</string>
    <string name="fashion_products">Fashion</string>
    <string name="men_products">Men</string>
    <string name="women_products">Women</string>
    <string name="footwear_products">Footwear</string>
    <string name="product_image">Product Image</string>
    <string name="product_name_placeholder">Best Products</string>
    <string name="product_price_placeholder">$200</string>
    <string name="product_price_placeholder_1">0</string>
    <string name="product_stock_placeholder">Stock: 11</string>
    <string name="product_categories_placeholder">Product Categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="no_products_find">No products find</string>
    <string name="background_image">Background Image</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">username</string>
    <string name="enter_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">No account?</string>
    <string name="error_msg">error is</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Have account?</string>
    <string name="registration_error">Error while registering new user</string>
    <string name="users">users</string>
    <string name="profile_pic_default">Default</string>
    <string name="profile_pic">profile_pic</string>
    <string name="user">user</string>
    <string name="empty_edit_text">Please fill in the required information</string>
    <string name="selected_product_info">product_id</string>
    <string name="password_error">The entered passwords do not match</string>
    <string name="fill_info">Please the fill in the missing information</string>
    <string name="successful_registration">Successfully registered</string>
    <string name="login_successful">Successfully Login</string>
    <string name="pictures">pics</string>
    <string name="cart">Cart</string>
    <string name="current_orders">my cart</string>
    <string name="order_history">Orders History</string>
    <string name="product_qty_dummy">2</string>
    <string name="decrease_product_quantity">Decrease product quantity</string>
    <string name="increase_product_quantity">Increase product quantity</string>
    <string name="max_stock">Cannot add more than the available stock</string>
    <string name="add_to_cart_success">Successfully added to your cart</string>
    <string name="prod_id_db">product_id</string>
    <string name="qty_db">quantity</string>
    <string name="total">Total</string>
    <string name="prod_del">Confirm Product Deletion</string>
    <string name="del_warning">Are you sure you want to remove this product from
        your cart?\n\nThis process cannot be undone</string>
    <string name="remove_successful">Successfully Removed</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="total_payment">Total Payment</string>
    <string name="name_placeholder">Jane Doe</string>
    <string name="email_placeholder">jane.doe@email.com</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="address_placeholder">National Chiao Tung University</string>
    <string name="date_placeholder">Date: 2020/11/09 – 11:30 A.M</string>
    <string name="from">from</string>
    <string name="fragment">fragment</string>
    <string name="order">place order</string>
    <string name="currency">USD</string>
    <string name="payment_confirmation">Confirm Products Payment</string>
    <string name="cancelled">Cancelled</string>
    <string name="invalid">Invalid</string>
    <string name="payment_details">paymentDetails</string>
    <string name="payment_amount">paymentAmount</string>
    <string name="response">response</string>
    <string name="id">id</string>
    <string name="state">state</string>
    <string name="approved">approved</string>
    <string name="orders">orders</string>
    <string name="thank_you">Thank You!</string>
    <string name="fore">For</string>
    <string name="purchase">Your Purchase</string>
    <string name="see_invoice"><u>Return to home page</u></string>
    <string name="activity">activity</string>
    <string name="product">product</string>
    <string name="price">price</string>
    <string name="status">status</string>
    <string name="created_date">created_date</string>
    <string name="single_buy">single</string>
    <string name="shipped">Shipped</string>
    <string name="qty_placeholder">1pc</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="bulk">bulk</string>
    <string name="products">products</string>
    <string name="order_details">orders_details</string>
    <string name="name">name</string>
    <string name="paypal_error">An unknown error occurred</string>
    <string name="invoice">INVOICE</string>
    <string name="order_placeholder">XXXX-XXXXXXXXXX</string>
    <string name="qty">QTY</string>
    <string name="product_s">PRODUCT(S)</string>
    <string name="download">Download</string>
    <string name="type">type</string>
    <string name="order_id">order_id</string>
    <string name="errata">\"Something Wrong: \"</string>
    <string name="no_app_pdf">No Apps to read PDF FIle</string>
    <string name="open_file">Open File</string>
    <string name="internal_storage">Please provide internal storage permission</string>
    <string name="products_list">products_list</string>
    <string name="sign_out">Sign out</string>
    <string name="personal_info">Personal Info</string>
    <string name="FAQ">FAQ</string>
    <string name="text">How to make a search?</string>
    <string name="text1">Click on the search bar\nEnter any keyword and the
    app will display the corresponding products.</string>
    <string name="text2">How to make a purchase?</string>
    <string name="text3">Instant buy: Click on any given product, you will be redirected to
    the product details.\nClick on Checkout button.\nOn the next screen, click on Place Order
        \nThere, you need to enter your PayPal information\n\n
    From Cart: Click on any given product, you will be redirected to its details.
    \nClick on Add to Cart.
        \nGo back to the Home Page, and click on the top corner icon to go to your cart\n
    There, click on the checkout button.\nOn the next screen, click on place order and enter your
    PayPal\'s information</string>

    <string name="text4">How to add to cart?</string>
    <string name="text5">Click on a product, on the next screen click to add to cart</string>
    <string name="text6">How to increase product in cart?</string>
    <string name="text7">Option 1:\nClick on a product, on the next screen click on Add to cart button the number of
    times you want to product to be added.\n\n
    Option 2: \nOn the home screen, click on the icon at the top right corner.\n
    If you already have product in cart, click on the plus sign to increase it until you reach the stock available.</string>
    <string name="text8">How to delete product from cart?</string>
    <string name="text9">Option 1:\n
    On the home screen, click on the top right corner icon to go to your cart.\n
        If your cart is not empty, click and hold the wanted product, a dialog will appear and
        click on YES.\n\n
        Option 2: \n
        On your cart, click on the minus button until it reaches 0.
    </string>
    <string name="text10">How to download receipt?</string>
    <string name="text11">On the home screen, click on the top right corner icon.\n
    On the next page, select Order History.\n
    Click on any order, a preview will be displayed and click on the download button.</string>
    <string name="text12">How to sign out?</string>
    <string name="text13">Click on the top left corner, and select Account.\n
    On the next page, click on Sign out.</string>
    <string name="text14">Developers: Thierry Marcelin and Loudwige Odice</string>
    <string name="admin">admin</string>
    <string-array name="available_paypal_accounts">
        <item>Email: john.doe007@email.com\n
        Password: johndoe007\n
        Balance: $150,000</item>

        <item>Email: jane.doe007@email.com\n
        Password: janedoe007\n
        Balance: $12,000</item>

        <item>Email: testing.ibuy@email.com\n
        Password: testingibuy\n
        Balance: $25,000</item>
    </string-array>

</resources>