<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/search_bar_spacing"
            android:background="@drawable/login_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FAQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/FAQ"
                android:textSize="@dimen/product_price_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/search_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/purchase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/purchase_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add_to_cart_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/increase_product_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text6"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/increase_product_qty_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text7"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text8"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/delete_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text9"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text10"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/receipt_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text11"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text12"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_out_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text13"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/developers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/text14"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>