<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".views.activities.ProductDetailActivity">

    <ImageView
        android:id="@+id/product_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".73"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".27"
        android:background="@color/dark_blue">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/product_price"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
            android:text="@string/product_name_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/product_price_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
            android:text="@string/product_categories_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/product_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_categories"
            android:layout_marginStart="@dimen/fab_margin"
            android:text="@string/product_stock_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/product_name_detail_margin_top"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/product_price_placeholder"
            android:textColor="@color/white"
            android:textSize="@dimen/product_detail_price_size" />

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/product_stock"
            android:layout_centerHorizontal="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_cart_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_stock"
            android:layout_alignEnd="@id/strut"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@drawable/bottom_view_border"
            android:text="@string/add_to_cart"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:drawableLeftCompat="@drawable/dark_shopping_cart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_stock"
            android:layout_alignStart="@id/strut"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/product_name_margin_top"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_toEndOf="@id/checkout_button"
            android:background="@drawable/bottom_view_border"
            android:text="@string/checkout"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:drawableLeftCompat="@drawable/ic_baseline_credit_card_24" />

    </RelativeLayout>


</LinearLayout>