<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/product_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:id="@+id/product_picture"
            android:layout_width="@dimen/product_size"
            android:layout_height="@dimen/product_size"
            android:layout_marginTop="@dimen/search_bar_spacing"
            android:contentDescription="@string/product_image"
            android:layout_marginEnd="@dimen/search_bar_spacing"
            android:layout_marginStart="@dimen/nav_header_vertical_spacing" />
<!--            android:src="@drawable/ic_baseline_tag_faces_24"-->

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/product_presentation_size"
            android:text="@string/product_name_placeholder"
            android:layout_toEndOf="@id/product_picture"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="@dimen/product_name_margin_top"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/product_price_size"
            android:layout_below="@id/product_name"
            android:layout_toEndOf="@id/product_picture"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/product_price_placeholder"/>

        <TextView
            android:id="@+id/product_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_price"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_toEndOf="@id/product_picture"
            android:textSize="@dimen/product_presentation_size"
            android:textStyle="italic"
            android:textColor="@color/dark_gray"

            android:text="@string/product_stock_placeholder"/>


        
    </RelativeLayout>

    

</androidx.constraintlayout.widget.ConstraintLayout>