<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_size"
        android:layout_marginLeft="@dimen/search_bar_spacing"
        android:layout_marginStart="@dimen/search_bar_spacing"
        android:layout_marginRight="@dimen/search_bar_spacing"
        android:layout_marginEnd="@dimen/search_bar_spacing"
        android:layout_marginTop="@dimen/card_view_radius"
        android:layout_marginBottom="@dimen/extremely_thin_margin"
        android:background="@drawable/product_placeholder"
        card_view:cardCornerRadius="@dimen/nav_header_vertical_spacing">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/product_picture"
                android:layout_width="@dimen/card_view_size"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image"
                android:src="@drawable/product_placeholder"/>

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/product_picture"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                android:textColor="@color/dark_gray"
                android:maxLength="40"
                android:text="@string/product_name_placeholder"
                android:textSize="@dimen/product_presentation_size" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:layout_below="@id/product_name"
                android:layout_toEndOf="@id/product_picture"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:textSize="@dimen/product_price_size"
                android:textStyle="bold"
                android:text="@string/product_price_placeholder"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_alignBottom="@+id/product_price"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/product_name_margin_top"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="-6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/decrease_product_qty"
                    android:layout_width="@dimen/search_bar_spacing"
                    android:layout_height="@dimen/search_bar_spacing"
                    android:background="@color/mid_dark_gray"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_remove_24"
                    android:contentDescription="@string/decrease_product_quantity" />

                <TextView
                    android:id="@+id/product_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/orange"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    android:text="@string/product_qty_dummy"/>

                <ImageView
                    android:id="@+id/increase_product_qty"
                    android:layout_width="@dimen/search_bar_spacing"
                    android:layout_height="@dimen/search_bar_spacing"
                    android:background="@color/mid_dark_gray"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_add_24"
                    android:contentDescription="@string/increase_product_quantity" />

            </LinearLayout>

        </RelativeLayout>
        
    </androidx.cardview.widget.CardView>

</LinearLayout>